Сделал вывод таблицы

--- a/SLR1-Generator/SLR1-Generator/SLR1-Generator.vcxproj
+++ b/SLR1-Generator/SLR1-Generator/SLR1-Generator.vcxproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="in.txt" />
+    <Text Include="in1.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
