--- a/SLR1-Generator/SLR1-Generator/SLR1-Generator.vcxproj.filters
+++ b/SLR1-Generator/SLR1-Generator/SLR1-Generator.vcxproj.filters
@@ -37,5 +37,8 @@
     <Text Include="out.txt">
       <Filter>Файлы ресурсов</Filter>
     </Text>
+    <Text Include="in3.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
   </ItemGroup>
 </Project>
