--- a/SyntacticRecognizer/SyntacticRecognizer/SyntacticRecognizer.vcxproj.filters
+++ b/SyntacticRecognizer/SyntacticRecognizer/SyntacticRecognizer.vcxproj.filters
@@ -71,4 +71,9 @@
       <Filter>Файлы ресурсов</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="LexerMachine.csv">
+      <Filter>Файлы ресурсов</Filter>
+    </None>
+  </ItemGroup>
 </Project>
